GAIM: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.11.0-pre13:
	* Can view/set chat topic in Jabber (thanks faceprint)

version 0.11.0-pre12 (05/29/2001):
	* Fixed a funny bug with auto responses when queued messages
	  are enabled.
	* Redesigned the Font Options preference page
	* Improved Jabber chat support (it whispers now, too)
	* Zephyr can do Subscriptions now (thanks to nsanch)
	* Auto-recon plugin got reworked
	* Lots of clean-ups
	* Some new pixmaps (Thanks, DennisR).
	* Fixed a segfault in IRC (Thanks Sean Egan)
	* MSN can now change your 'friendly name' (Thanks for the
	  packet logs, aechols)
	* More IRC improvements [colors, etc] (Thanks Sean Egan)
	* Improved proxy options
	* Fixed a small issue with HTML not being stripped from
	  log files properly (Thanks, faceprint and David Stoddard)
	* Can turn on/off Yahoo! Mail announcements
	* Can force messages through the server for ICQ (use this if
	  you have problems sending)
	* Can receive buddy icons in Oscar (requires gdk_pixbuf,
	  which GNOME depends on. If you --disable-pixbuf, it will
	  disable this.)
	* Redesigned plugins dialog (thanks Mike Heffner)

version 0.11.0-pre11 (04/30/2001):
	* Zephyr updates and additions, thanks Neil Sanchala (nsanch)
	* Jabber can send/accept chat invites (due to mid)
	* MSN has the option to notify you of new hotmail
	  messages
	* Fixed a problem with ADD requests in MSN
	* Fixed a small memory leak with MSN
	* Moved MSN's spammy debug output into debug_printf's
	* Can rename groups/buddies in the Edit Buddies pane
	  (thanks Neil Sanchala)
	* Some perl updates (thanks to Sean Egan)
	* IRC got the following slash commands:
	  op, deop, voice, devoice, mode, raw, quote, and kick (thanks
	  to Sean Egan)
	* MSN Properly handles URL decoding of 'friendly' names
	* Redesigned Preferences pages (design by DennisR)
	* Can select where tabs are for tabbed IM/Chat windows
	* Option to queue away messages while away